samples/_failures_safe/1761371077_6977eb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_466c37b0.c: In function ‘main’:
./samples/SAFE/__tmp_466c37b0.c:156:43: error: missing terminating " character
  156 |                     print_matrix(&result, "A
      |                                           ^~
./samples/SAFE/__tmp_466c37b0.c:156:21: error: expected expression at end of input
  156 |                     print_matrix(&result, "A
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_466c37b0.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_466c37b0.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_466c37b0.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_466c37b0.c:156:21: error: expected declaration or statement at end of input
